# nano_inf

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
headers/: activations.hpp  conv.hpp  fnn.hpp  matrix.hpp  nn.hpp  nnbuilder.hpp  nnlayer.hpp  onnx.pb.h
src/: CMakeLists.txt  conv.cpp  fnn.cpp  main.cpp  matrix.cpp  nn.cpp  nnbuilder.cpp  onnx.pb.cc
